# duckpi-image-capture

./: .env.sample  ImagingSystemCode_22-8-24_aquascape_full.py  README.md  poetry.toml  pyproject.toml
docs/: jupyter.md
duckpi_ic/: gui.py  ic.py  settings.py  util.py
scripts/: reset_cameras.py
tests/: conftest.py  test_ic.py  test_util.py
tests/fixtures/: test_config.yml  test_config_stage_2_long.yml  test_config_stage_2_normal.yml  test_config_stage_2_short.yml
